# elma-classic

./: D_PIC.CPP  ECSET.CPP  ECSET.H  EDITTOLT.CPP  EDITTOLT.H  EDITTOOL.CPP  EDITUJ.CPP  EDITUJ.H  JATEKOS.CPP  JATEKOS.H  KIRAJ320.CPP  LEJATSZO.CPP  LEJATSZO.H  M_PIC.H  abc8.cpp  abc8.h  affine_pic_render.cpp  ball.cpp  best_times.cpp  best_times.h  canvas.cpp  canvas.h  changelog.txt  editor_canvas.cpp  editor_dialog.cpp  editor_dialog.h  editor_topology.cpp  eol_settings.cpp  eol_settings.h  fs_utils.cpp  fs_utils.h  gl_renderer.cpp  grass.cpp  grass.h  keys.cpp  level.cpp  level.h  level_load.cpp  lgr.cpp  lgr.h  (+36 more)
.github/workflows/: ci.yaml
include/editor/: window.h
include/eol/: console.h  eol.h  eol_events.h  eol_table.h  eol_types.h  null_protocol.h
include/menu/: nav.h  pic.h  rec_list.h  replay.h  replay_cache.h
include/platform/sdl/: gl_renderer.h
include/renderer/: object_overlay.h
include/util/: util.h
resources/: medium.abc  small.abc
src/editor/: canvas.cpp  dialog.cpp  tool.cpp  topology.cpp  window.cpp
src/eol/: battle.cpp  console.cpp  eol.cpp  eol_table.cpp
src/menu/: ball.cpp  intro.cpp  main.cpp  nav.cpp  options.cpp  pic.cpp  play.cpp  rec_list.cpp  replay.cpp  replay_cache.cpp  skip.cpp
src/platform/sdl/: gl_renderer.cpp  sdl.cpp
src/renderer/: object_overlay.cpp  render.cpp
src/util/: util.cpp
